--- a/notes_backend/tsconfig.json
+++ b/notes_backend/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "lib": ["es5", "es6"],
     "target": "ES6",
     "module": "CommonJS",
     "rootDir": "./src",
@@ -7,6 +8,8 @@
     "esModuleInterop": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
+    "moduleResolution": "node",
+    "sourceMap": true,
     "strict": true
   }
 }
