--- a/notes_backend/package.json
+++ b/notes_backend/package.json
@@ -5,11 +5,14 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon -r dotenv/config src/app.ts"
+    "start": "ts-node -r dotenv/config src/app.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "prettier": {
+    "arrowParens": "avoid"
+  },
   "devDependencies": {
     "@types/node": "^14.14.7",
     "@typescript-eslint/eslint-plugin": "^4.7.0",
